# alphazero

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  TASK.md  loop.sh  mcts_refactor_plan.md  performance_improvement_plan.md  pyproject.toml  test-pyramid-plan.md
configs/: chess.yaml  chess_1hr.yaml  chess_default.yaml  chess_test.yaml  go.yaml  go_default.yaml  go_test.yaml
misc_docs/: devloop.txt  how-to-guide.md  mcts_refactor_notes.md  mcts_refactor_plan.md  review.md
notes/: elo-checks.md  go-improvements-plan.md  go-ownership-plan.md  memory-leak-fix-plan.md  notes.md  opus4.6_plan.md  planning.txt  self-play-throughput-plan.md  torch-compile-warmup.md  webui-update-plan.md
notes/old/: feature-notes.md  folded-checkpoint-support.md  gpt-codex5.3._plan.md  gpu_optimization.md  perf-improvements-2026-02-24.md  perf_improvements.md  perf_improvements_new.md  tasks.md
notes/old/tasks/complete/: task-05-config-tuning.md
notes/tasks/: task-01-torch-compile.md  task-02-batch-grad-stats.md  task-04-batch-loss-metrics.md
notes/tasks/complete/: task-03-cuda-streams.md
prompts/: PROMPT_build.md  PROMPT_plan.md  PROMPT_review.md  PROMPT_spec.md  codex-webui-update-prompt.md
python/alphazero/: config.py
python/alphazero/network/: __init__.py  base.py  bn_fold.py  heads.py  resnet_se.py
python/alphazero/pipeline/: __init__.py  evaluation.py  orchestrator.py
python/alphazero/training/: __init__.py  loss.py  lr_schedule.py  trainer.py
python/alphazero/utils/: __init__.py  checkpoint.py  logging.py
scripts/: benchmark.py  export_model.py  play.py  train.py
specs/: game-interface.md  infrastructure.md  mcts.md  neural-network.md  overview.md  pipeline.md
src/: CMakeLists.txt
src/bindings/: python_bindings.cpp
src/games/: game_config.h  game_state.h
src/games/chess/: bitboard.cpp  bitboard.h  chess_config.cpp  chess_config.h  chess_state.cpp  chess_state.h  movegen.cpp  movegen.h
src/games/go/: go_config.cpp  go_config.h  go_rules.cpp  go_rules.h  go_state.cpp  go_state.h  scoring.cpp  scoring.h
src/mcts/: arena_node_store.cpp  arena_node_store.h  eval_queue.cpp  eval_queue.h  mcts_node.h  mcts_search.cpp  mcts_search.h  node_store.h
src/nn/: libtorch_inference.cpp  libtorch_inference.h  nn_inference.h
src/selfplay/: compact_replay_buffer.cpp  compact_replay_buffer.h  replay_buffer.cpp  replay_buffer.h  replay_compression.cpp  replay_compression.h  self_play_game.cpp  self_play_game.h  self_play_manager.cpp  self_play_manager.h
tests/cpp/: CMakeLists.txt  test_arena.cpp  test_chess_bitboard.cpp  test_chess_encoding.cpp  test_chess_movegen.cpp  test_chess_serialization.cpp  test_chess_state.cpp  test_compact_replay_buffer.cpp  test_eval_queue.cpp  test_game_interfaces.cpp  test_go_encoding.cpp  test_go_rules.cpp  test_go_serialization.cpp  test_go_state.cpp  test_libtorch_inference.cpp  test_mcts.cpp  test_replay_buffer.cpp  test_replay_compression.cpp  test_scaffold_smoke.cpp  test_self_play_game.cpp  test_self_play_manager.cpp
tests/python/: test_benchmark_script.py  test_bindings.py  test_bn_fold.py  test_checkpoint_utils.py  test_config.py  test_connect_four_learning.py  test_evaluation.py  test_export_model_script.py  test_integration_smoke.py  test_logging.py  test_loss.py  test_lr_schedule.py  test_network.py  test_orchestrator.py  test_play_script.py  test_scaffold.py  test_train_script.py  test_training.py
web/: engine.py  model_manager.py  server.py  watch_engine.py
web/static/: index.html  watch.html
web/static/css/: style.css  watch.css
web/static/js/: app.js  watch.js
