cmake_minimum_required(VERSION 3.24)
project(alphazero VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(CTest)

option(ALPHAZERO_ENABLE_CUDA "Enable CUDA support when a CUDA compiler is available." ON)
option(ALPHAZERO_ENABLE_TORCH "Enable LibTorch integration when available." ON)
option(ALPHAZERO_ENABLE_PYBIND "Build the pybind11 extension when available." ON)
option(ALPHAZERO_ENABLE_CPP_TESTS "Build C++ tests." ON)

if(ALPHAZERO_ENABLE_CUDA)
    include(CheckLanguage)
    check_language(CUDA)
    if(CMAKE_CUDA_COMPILER)
        enable_language(CUDA)
        set(ALPHAZERO_HAS_CUDA ON)
        find_package(CUDAToolkit QUIET)
        if(NOT CUDAToolkit_FOUND)
            message(WARNING "CUDAToolkit not found; CUDA runtime linking is disabled.")
        endif()
    else()
        message(WARNING "CUDA compiler not found; configure with -DALPHAZERO_ENABLE_CUDA=OFF to silence this warning.")
    endif()
endif()

if(ALPHAZERO_ENABLE_TORCH)
    find_package(Torch QUIET)
    if(Torch_FOUND)
        set(ALPHAZERO_HAS_TORCH ON)
    else()
        message(WARNING "LibTorch not found; configure with -DALPHAZERO_ENABLE_TORCH=OFF to silence this warning.")
    endif()
endif()

if(ALPHAZERO_ENABLE_PYBIND)
    find_package(pybind11 QUIET)
    if(pybind11_FOUND)
        set(ALPHAZERO_HAS_PYBIND ON)
    else()
        message(WARNING "pybind11 not found; Python extension target will be skipped.")
    endif()
endif()

if(ALPHAZERO_ENABLE_CPP_TESTS)
    find_package(GTest QUIET)
    if(GTest_FOUND)
        set(ALPHAZERO_HAS_GTEST ON)
    else()
        message(WARNING "GoogleTest not found; only scaffold smoke test will be built.")
    endif()
endif()

add_subdirectory(src)

if(ALPHAZERO_ENABLE_CPP_TESTS)
    add_subdirectory(tests/cpp)
endif()
